added prefix=something to sconscript argument so you can build with arm-linux-gnueabihf- for example

--- a/Sconstruct
+++ b/Sconstruct
@@ -2,7 +2,7 @@ from glob import glob
 import os
 import fnmatch
 
-prefix = ''
+prefix = ARGUMENTS.get('prefix', '')
 cc = prefix + 'gcc'
 cxx = prefix + 'g++'
 ar = prefix + 'ar'
