--- a/Sconstruct
+++ b/Sconstruct
@@ -2,19 +2,17 @@ from glob import glob
 import os
 import fnmatch
 
-prefix = ARGUMENTS.get('prefix', '')
+project_name = 'lmcp'
+
+prefix = ''
 cc = prefix + 'gcc'
 cxx = prefix + 'g++'
 ar = prefix + 'ar'
 ranlib = prefix + 'ranlib'
 
-project_name = 'lmcp'
 build_dir = 'build/'
-
 src_dir = 'src/'
 include_dir = 'include/'
-src_ext = '.cpp'
-
 static_lib_dir = 'lib/'
 lib_dir = 'libraries/'
 
@@ -22,11 +20,38 @@ lib_dir = 'libraries/'
 system_libs = []
 
 # local libs are libraries inside of the project libraries folder.
-# asuming the library folder has the same name as the library (lib+foldername).
+# asuming the library folder has the same name as the library folderl (lib+foldername).
 local_libs = []
 
-ccflags = ['-Wall']
-ccflags.append('-fPIC')
+
+# compiler flags for when doing development.
+cc_dev_flags = []
+cc_dev_flags.append('-ggdb3')
+cc_dev_flags.append('-O0')
+
+# compiler flags for when building a library.
+cc_lib_flags = []
+cc_lib_flags.append('-fPIC')
+
+
+# default compiler flags. always included.
+ccflags = []
+ccflags.append('-O2')
+ccflags.append('-ansi')
+ccflags.append('-pedantic-errors')
+ccflags.append('-fdiagnostics-color=always')
+ccflags.append('-Wextra')
+ccflags.append('-Wall')
+ccflags.append('--std=c++11')
+
+# in a release build no flags are added.
+if 'libbuild' in COMMAND_LINE_TARGETS:
+    ccflags += cc_lib_flags
+elif 'devbuild' in COMMAND_LINE_TARGETS:
+    # remove optimization from default flags.
+    ccflags.remove('-O2')
+    ccflags += cc_dev_flags
+
 
 # setup build environment
 env = Environment()
@@ -38,6 +63,14 @@ env['RANLIB'] = ranlib
 env['CCFLAGS'] = ccflags
 env['ENV']['PATH'] = os.environ['PATH']
 env.Append(CPPPATH=[include_dir])
+
+# lib_build = ARGUMENTS.get('libbuild', 0)
+
+# add all the directories in include
+for root, dirnames, filenames in os.walk(include_dir):
+    for dirname in dirnames:
+        path = os.path.join(root, dirname)
+        env.Append(CPPPATH=[path])
 
 # run for local libs
 if len(local_libs):
@@ -51,31 +84,43 @@ if len(system_libs):
     # run for system installed libs
     for lib in system_libs:
         env.Append(LIBS=[lib]);
-    print("[%s] libs: %s" % (project_name, env['LIBS']))
+    print("libs: %s" % env['LIBS'])
 
 # collect source and make object names for them.
 obj_targets = []
 src_files = []
 for root, dirnames, filenames in os.walk(src_dir):
-    for filename in fnmatch.filter(filenames, '*' + src_ext):
-        src_files.append(os.path.join(root, filename))
+    for filename in fnmatch.filter(filenames, '*.cpp'):
+        if ('libbuild' in COMMAND_LINE_TARGETS) and ("main" in filename):
+            print("filename: %s" % filename)
+        else:
+            src_files.append(os.path.join(root, filename))
 
 for src in src_files:
-    target = src.replace(src_ext, '.o')
+    target = src.replace('.cpp', '.o')
     obj_targets.append(build_dir + target)
 
 objects = []
 for (obj_target, src_file) in zip(obj_targets, src_files):
     objects.append(env.Object(target=obj_target, source=src_file))
 
-env.Program(target=build_dir+project_name, source=objects)
-# env.Library(target=lib_dir + project_name, source=objects)
-env.StaticLibrary(target=static_lib_dir + project_name, source=objects)
+program = env.Program(target=build_dir + project_name, source=objects)
+static = env.StaticLibrary(target=static_lib_dir + project_name, source=objects)
 
-Clean('.', build_dir)
+
+env.Alias('libbuild', static)
+env.Alias('devbuild', program)
+env.Default(program)
+
+# this removes both build dir and static dir
+# if they exist.
+env.Clean(program, build_dir)
+env.Clean(program, static_lib_dir)
+env.Clean(static, static_lib_dir)
 
 if 'CPPPATH' in env:
-    print("[%s] cpppath: %s" % (project_name, env['CPPPATH']))
+    print("cpppath: %s" % env['CPPPATH'])
 if 'LIBPATH' in env:
-    print("[%s] libpath: %s" % (project_name, env['LIBPATH']))
-# print("obj_target: %s, src_files: %s \n" % (str(obj_targets), str(src_files)))
+    print("libpath: %s" % env['LIBPATH'])
+
+print("DEF_TARG:%s" % (map(str, DEFAULT_TARGETS)))
