--- a/Sconstruct
+++ b/Sconstruct
@@ -1,3 +1,20 @@
+"""
+    build script by: Duality
+    github: https://github.com/Duality4Y
+    git: https://github.com/TkkrLab/scons-build-base
+
+    three modes for building:
+
+    devbuild: scons devbuild
+    build with special debugging flags.
+
+    libbuild: scons libbuild
+    builds a static library.
+
+    and normal scons
+    which builds with no special flags.
+"""
+
 from glob import glob
 import os
 import fnmatch
@@ -12,6 +29,7 @@ ranlib = prefix + 'ranlib'
 
 build_dir = 'build/'
 src_dir = 'src/'
+src_ext = '.cpp'
 include_dir = 'include/'
 static_lib_dir = 'lib/'
 lib_dir = 'libraries/'
@@ -28,9 +46,6 @@ local_libs = []
 cc_dev_flags = []
 cc_dev_flags.append('-ggdb3')
 cc_dev_flags.append('-O0')
-cc_dev_flags.append('-Werror')
-cc_dev_flags.append('-Wfatal-errors')
-cc_dev_flags.append('-Wsign-conversion')
 
 # compiler flags for when building a library.
 cc_lib_flags = []
@@ -40,11 +55,15 @@ cc_lib_flags.append('-fPIC')
 # default compiler flags. always included.
 ccflags = []
 ccflags.append('-O2')
-ccflags.append('-ansi')
-ccflags.append('-pedantic-errors')
-ccflags.append('-fdiagnostics-color=always')
+ccflags.append('-Werror')
+ccflags.append('-Wfatal-errors')
+ccflags.append('-Wsign-conversion')
+ccflags.append('-Wpedantic')
 ccflags.append('-Wextra')
 ccflags.append('-Wall')
+ccflags.append('-pedantic-errors')
+ccflags.append('-fdiagnostics-color=auto')
+ccflags.append('-ansi')
 ccflags.append('--std=c++11')
 
 # in a release build no flags are added.
@@ -67,8 +86,6 @@ env['CCFLAGS'] = ccflags
 env['ENV']['PATH'] = os.environ['PATH']
 env.Append(CPPPATH=[include_dir])
 
-# lib_build = ARGUMENTS.get('libbuild', 0)
-
 # add all the directories in include
 for root, dirnames, filenames in os.walk(include_dir):
     for dirname in dirnames:
@@ -78,8 +95,10 @@ for root, dirnames, filenames in os.walk(include_dir):
 # run for local libs
 if len(local_libs):
     for lib in local_libs:
-        env.Append(CPPPATH=[lib_dir + lib + '/' + 'include/'])
-        env.Append(LIBPATH=[lib_dir + lib + '/' + 'lib/'])
+        cppath = os.path.join(lib_dir, lib, include_dir)
+        libpath = os.path.join(lib_dir, lib, static_lib_dir)
+        env.Append(CPPPATH=[cppath])
+        env.Append(LIBPATH=[libpath])
         env.Append(LIBS=[lib])
 
 # run for system libs
@@ -93,23 +112,25 @@ if len(system_libs):
 obj_targets = []
 src_files = []
 for root, dirnames, filenames in os.walk(src_dir):
-    for filename in fnmatch.filter(filenames, '*.cpp'):
+    for filename in fnmatch.filter(filenames, "*" + src_ext):
         if ('libbuild' in COMMAND_LINE_TARGETS) and ("main" in filename):
             print("filename: %s" % filename)
         else:
             src_files.append(os.path.join(root, filename))
 
 for src in src_files:
-    target = src.replace('.cpp', '.o')
-    obj_targets.append(build_dir + target)
+    target = src.replace(src_ext, '.o')
+    obj_targets.append(os.path.join(build_dir, target))
 
 objects = []
 for (obj_target, src_file) in zip(obj_targets, src_files):
     objects.append(env.Object(target=obj_target, source=src_file))
 
-program = env.Program(target=build_dir + project_name, source=objects)
-static = env.StaticLibrary(target=static_lib_dir + project_name, source=objects)
+program = env.Program(target=os.path.join(build_dir, project_name),
+                      source=objects)
 
+static = env.StaticLibrary(target=os.path.join(static_lib_dir, project_name),
+                           source=objects)
 
 env.Alias('libbuild', static)
 env.Alias('devbuild', program)
